// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceDetailsCard Displays "SYSTEM" badge 1`] = `
<div
  className="fd-panel namespace-details-card"
  onClick={[Function]}
>
  <div
    className="fd-panel__header fd-has-color-text-1 fd-has-type-1"
  >
    <span>
      test
      <span
        className="fd-badge fd-has-margin-left-tiny"
      >
        System
      </span>
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            className="fd-button--light sap-icon--overflow popover-control"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <section
      className="namespace-details-card__body"
    >
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
          style={
            Object {
              "color": "#107e3e",
            }
          }
        >
          10
          /
          10
        </p>
        <p>
          Pods are healthy
        </p>
      </div>
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
        >
          0
        </p>
        <p>
          Bound Applications
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`NamespaceDetailsCard Displays overlay when status is "Terminating" 1`] = `
<div
  className="fd-panel namespace-details-card namespace-details-card--terminating"
  onClick={[Function]}
>
  <div
    className="fd-panel__header fd-has-color-text-1 fd-has-type-1"
  >
    <span>
      test
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            className="fd-button--light sap-icon--overflow popover-control"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <section
      className="namespace-details-card__body"
    >
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
          style={
            Object {
              "color": "#107e3e",
            }
          }
        >
          10
          /
          10
        </p>
        <p>
          Pods are healthy
        </p>
      </div>
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
        >
          0
        </p>
        <p>
          Bound Applications
        </p>
      </div>
    </section>
  </div>
  <div
    className="overlay"
  >
    <div
      className="overlay-caption fd-has-type-3"
    >
      Terminating...
      <div
        aria-hidden="false"
        aria-label="Loading"
        class="fd-loading-dots"
      >
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`NamespaceDetailsCard Renders with minimal props 1`] = `
<div
  className="fd-panel namespace-details-card"
  onClick={[Function]}
>
  <div
    className="fd-panel__header fd-has-color-text-1 fd-has-type-1"
  >
    <span>
      test
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            className="fd-button--light sap-icon--overflow popover-control"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <section
      className="namespace-details-card__body"
    >
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
          style={
            Object {
              "color": "#107e3e",
            }
          }
        >
          10
          /
          10
        </p>
        <p>
          Pods are healthy
        </p>
      </div>
      <div>
        <p
          className="fd-has-type-4 fd-has-font-weight-light"
        >
          0
        </p>
        <p>
          Bound Applications
        </p>
      </div>
    </section>
  </div>
</div>
`;
